[package]
name = "calandria_ha"
version = "0.1.0"
authors = ["aijay <aijay.adams@gmail.com>"]
edition = "2021"

[lib]
path = "./src/lib.rs"

[[bin]]
name="calandriaha"
path="./src/main.rs"

[dependencies]
tonic = "0.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.8"
surge-ping = "0.5.2"

[build-dependencies]
tonic-build = "0.5"