[package]
name = "calandria_ha"
version = "0.1.0"
authors = ["aijay <aijay.adams@gmail.com>"]
edition = "2021"

[lib]
path = "./src/lib.rs"

[[bin]]
name="calandriaha"
path="./src/main.rs"

[dependencies]
tonic = "0.5"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
prost = "0.8"
tokio-icmp-echo = "0.4.1"
log = "0.4.0"
env_logger = "0.8.4"

[build-dependencies]
tonic-build = "0.5"